// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package bandwidth;

import "piecestore.proto";

service Bandwidth {
  rpc BandwidthAgreements(piecestoreroutes.RenterBandwidthAllocation) returns (AgreementsSummary) {}
}

message AgreementsSummary {
  enum Status {
    FAIL = 0;
    OK = 1;
  }

  Status status = 1;
}